final code shittt

--- a/Test_Collaborative.ipynb
+++ b/Test_Collaborative.ipynb
@@ -1,30 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Library"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy import sparse\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "import scipy.sparse"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load DataSet"
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
@@ -42,15 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = len(smd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +464,7 @@
        "[9025 rows x 26 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,16 +475,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train1 = train[['userId','movieIndex','rating']]"
+    "train = train[['userId','movieIndex','rating']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -626,22 +602,43 @@
        "[79848 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train1"
+    "train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = test[['userId','movieIndex','rating']]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(79848, 3)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test = test[['userId','movieIndex','rating']]"
+    "train_matrix = train.values\n",
+    "train_matrix.shape"
    ]
   },
   {
@@ -652,31 +649,10 @@
     {
      "data": {
       "text/plain": [
-       "(79848, 3)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_matrix = train1.values\n",
-    "train_matrix.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "(19962, 3)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,514 +664,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "k = 30"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#r_cols = ['user_id','item_id','rating']\n",
-    "#ratings_example = pd.read_csv('./ex.dat',sep =' ', names= r_cols, encoding = 'latin-1')"
+    "n_users = int(np.max(train_matrix[:, 0])) + 1\n",
+    "n_items = int(np.max(train_matrix[:, 1])) + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ratings_example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ratings_example_matrix = ratings_example.values\n",
-    "#ratings_example_matrix.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CF(object):\n",
-    "    # Y_data is user-item matrix with have 3 column - (user_id, item_id, ratings) \n",
-    "    # uuCF mode (user-user or item-item)\n",
-    "    # k is number of user similar to the target-user\n",
-    "    def __init__(self, Y_data, k, dist_func = cosine_similarity, uuCF = 1):\n",
-    "        self.uuCF = uuCF \n",
-    "        self.Y_data = Y_data if uuCF else Y_data[:, [1, 0, 2]]\n",
-    "        self.k = k\n",
-    "        self.dist_func = dist_func\n",
-    "        self.Ybar_data = None\n",
-    "        # number of users and items. \n",
-    "        self.n_users = int(np.max(self.Y_data[:, 0])) + 1\n",
-    "        self.n_items = int(np.max(self.Y_data[:, 1])) + 1\n",
-    "        self.items_id = np.unique(self.Y_data[:,1])\n",
-    "        self.items_id = [int(i) for i in self.items_id]\n",
-    "    \n",
-    "    def add(self, new_data):\n",
-    "        \"\"\"\n",
-    "        Update Y_data matrix when new ratings come.\n",
-    "        For simplicity, suppose that there is no new user or item.\n",
-    "        \"\"\"\n",
-    "        self.Y_data = np.concatenate((self.Y_data, new_data), axis = 0)\n",
-    "  \n",
-    "    def normalize_Y(self):\n",
-    "        # get all list of user\n",
-    "        users = self.Y_data[:, 0]\n",
-    "        self.Ybar_data = self.Y_data.copy() # save normalized user-item matrix\n",
-    "        # 1 dimention contain list of unique users which\n",
-    "        # after this with contain rating mean value corresponding user_id\n",
-    "        self.means = np.zeros((self.n_users,))\n",
-    "\n",
-    "        for n in range(self.n_users):\n",
-    "            # row indices of rating done by user n \n",
-    "            ids = np.where(users == n)[0].astype(np.int32)\n",
-    "            \n",
-    "            #indices of all item associated with user n\n",
-    "            item_ids = self.Y_data[ids, 1]\n",
-    "            \n",
-    "            # indices of all ratings associated with user n\n",
-    "            ratings = self.Y_data[ids, 2]\n",
-    "            \n",
-    "            #take mean\n",
-    "            m = np.mean(ratings)\n",
-    "            if np.isnan(m):\n",
-    "                m = 0 # to avoid empty array and nan value\n",
-    "                \n",
-    "            self.means[n] = m  # save mean value\n",
-    "            self.Ybar_data[ids, 2] = ratings - self.means[n]\n",
-    "        ################################################\n",
-    "        # form the rating matrix as a sparse matrix. Sparsity is important \n",
-    "        # for both memory and computing efficiency. For example, if #user = 1M, \n",
-    "        # #item = 100k, then shape of the rating matrix would be (100k, 1M), \n",
-    "        # you may not have enough memory to store this. Then, instead, we store \n",
-    "        # nonzeros only, and, of course, their location\n",
-    "        \n",
-    "        # and sparse matrix which is usually contain non-zero value and index of it\n",
-    "        # systax : sparse_matrix = coo_matrix((data,(row,col)), shape=(length(row),length(column)))\n",
-    "        self.Ybar = sparse.coo_matrix((self.Ybar_data[:,2],(self.Ybar_data[:, 1], self.Ybar_data[:,0])), (self.n_items, self.n_users))\n",
-    "       \n",
-    "        # sort row and column\n",
-    "        self.Ybar = self.Ybar.tocsr()\n",
-    "        \n",
-    "    def similarity(self):\n",
-    "        # The \"close-enough\" factor. lay phan sau gia tri thap phan\n",
-    "        # self.Ybar.T : vì ma trận thực ra là một mảng lưu nhiều \n",
-    "        # mảng khác. nên mỗi hàng đại diện một mảng \n",
-    "        # self.Ybar.T đảo cột thành hàng. 1 mảng con đại diện cho \n",
-    "        # 1 user \n",
-    "        eps = 1e-6\n",
-    "        self.S = self.dist_func(self.Ybar.T, self.Ybar.T)\n",
-    "    \n",
-    "    def refesh(self):\n",
-    "        \"\"\"\n",
-    "        Normalize data and calculate similarity matrix again (after\n",
-    "        some few ratings added)\n",
-    "        \"\"\"\n",
-    "        self.normalize_Y()\n",
-    "        self.similarity()\n",
-    "    \n",
-    "    def return_similarity_matrix(self):\n",
-    "        return self.S\n",
-    "    \n",
-    "    def return_normalize_matrix(self):\n",
-    "        return self.Ybar\n",
-    "    \n",
-    "    def return_mean_value(self):\n",
-    "        return self.means\n",
-    "    \n",
-    "    def fit(self):\n",
-    "        self.refesh()\n",
-    "    \n",
-    "    # u - current user\n",
-    "    # i - current item need to predict rating\n",
-    "    def pred(self, u, i, normalized = 1):\n",
-    "        \"\"\" \n",
-    "        predict the rating of user u for item i (normalized)\n",
-    "        if you need the un\n",
-    "        \"\"\"\n",
-    "        # Step 1: find all index that contain item index equal i\n",
-    "        ids = np.where(self.Y_data[:, 1] == i)[0].astype(np.int32)\n",
-    "      \n",
-    "        # Step 2: find all user that corresponing to list index\n",
-    "        # which mean user that rated item i\n",
-    "        users_rated_i = (self.Y_data[ids, 0].astype(np.int32))\n",
-    "        \n",
-    "        # Step 3: find similarity btw the current user and  others\n",
-    "        # who already rated i\n",
-    "        sim = self.S[u, users_rated_i]\n",
-    "        \n",
-    "        #Step 4: find the k most similarity users\n",
-    "        # cái hay của argsort là nó sort giá trị xong thì lưu lại \n",
-    "        # danh sách index đã được sort chứ không thay đổi array\n",
-    "        a = np.argsort(sim)[-self.k:]\n",
-    "        # and corresponding similarity \n",
-    "        nearest_s = sim[a]\n",
-    "        # Value of ratings to target item bae on 'near' users r\n",
-    "        r = self.Ybar[i, users_rated_i[a]]\n",
-    "        \n",
-    "        if normalized:\n",
-    "        # adding a small number, for instance, 1e-8, to avoid \n",
-    "        #dividing by 0\n",
-    "        # np.abs lấy giá trị tuyệt đối của mảng \n",
-    "            return (r*nearest_s)[0]/(np.abs(nearest_s).sum() + 1e-8)\n",
-    "        \n",
-    "        # lấy giá trị rating trước khi normalized\n",
-    "        return (r*nearest_s)[0]/(np.abs(nearest_s).sum() + 1e-8) + self.means[u]\n",
-    "   \n",
-    "\n",
-    "    def recommend(self, u):\n",
-    "        \"\"\"\n",
-    "        Determine all items should be recommended for user u.\n",
-    "        The decision is made based on all i such that:\n",
-    "        self.pred(u, i) > 0. Suppose we are considering items which \n",
-    "        have not been rated by u yet. \n",
-    "        \"\"\"\n",
-    "        ids = np.where(self.Y_data[:, 0] == u)[0]\n",
-    "        items_rated_by_u = self.Y_data[ids, 1].tolist()\n",
-    "        recommended_items = {}\n",
-    "        \n",
-    "        for i in range(self.n_items):\n",
-    "            if i not in items_rated_by_u:\n",
-    "                rating = self.pred(u,i,0)\n",
-    "                recommended_items[i] = rating\n",
-    "        \n",
-    "        \n",
-    "        return (recommended_items)\n",
+    "def normalize_Y(self):\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#rs = CF(ratings_example_matrix, k = 2, uuCF = 1)\n",
-    "#rs.fit()\n",
-    "#rs.recommend(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ratings_example_1 = ratings_example[['item_id','user_id','rating']]\n",
-    "#ratings_example_matrix_1 = ratings_example_1.values\n",
-    "#ratings_example_matrix_1.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#rs = CF(ratings_example_matrix_1, k = 2, uuCF = 0)\n",
-    "#rs.fit()\n",
-    "#rs.recommend(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rs = CF(train_matrix, k = 30, uuCF = 1)\n",
-    "rs.fit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "number_row_test = test_matrix.shape[0]\n",
-    "SE = 0 # squared error"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "User-user CF, RMSE = 0.9555197214810008\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(number_row_test):\n",
-    "    pred = rs.pred(int(test_matrix[i,0]),int(test_matrix[i,1]),0)\n",
-    "    SE += (pred - int(test_matrix[i, 2]))**2 # [a**2] mean power 2 - a^2\n",
-    "\n",
-    "RMSE = np.sqrt(SE/number_row_test)    \n",
-    "print('User-user CF, RMSE =', RMSE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this fuction return movie_index in meta_data_dataset and ratings of user  \n",
-    "def get_items_rated_by_user(rate_matrix, user_id):\n",
-    "    y = rate_matrix[:,0] # get all the value in user_id column\n",
-    "    # get list of user_id index in y which value equal input \n",
-    "    # user_id\n",
-    "    ids = np.where(y == user_id)[0]\n",
-    "    # get list movie_id matching user_id \n",
-    "    item_ids = rate_matrix[ids, 1]\n",
-    "    item_ids = [int(i) for i in item_ids]\n",
-    "    \n",
-    "    scores = rate_matrix[ids,2]\n",
-    "    return (item_ids, scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_list_movie_have_not_rated(rate_matrix, userId,movie_count):\n",
-    "    user_rated, score = get_items_rated_by_user(rate_matrix,userId)\n",
-    "    result = []\n",
-    "    for i in range(movie_count):\n",
-    "         if i not in user_rated: result.append(i)\n",
-    "    return (userId, result)            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9011"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(get_list_movie_have_not_rated(train_matrix, 0,N)[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "user_id, movies_pre =  get_list_movie_have_not_rated(train_matrix, 0,N)\n",
-    "result = []\n",
-    "for i in movies_pre:\n",
-    "       result.append(rs.pred(user_id,i,0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9011"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.save('mean_value_matrix.npy',rs.return_mean_value())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scipy.sparse.save_npz('collaborative_normalize_matrix.npz', rs.return_normalize_matrix())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.save('collaborative_similarity_matrix.npy',rs.return_similarity_matrix())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.save('collaborative_similarity_matrix.npy',rs.return_similarity_matrix())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.save('train_matrix.npy', train_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(9025, 9025)\n"
-     ]
-    }
-   ],
-   "source": [
-    "rs = CF(train_matrix, k = 30, uuCF = 0)\n",
-    "rs.fit()\n",
-    "#result = rs.recommend(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "593"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(rs.recommend(1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#len(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#result[83]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#test[test['movieIndex'] == 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "number_row_test = test_matrix.shape[0]\n",
-    "SE = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Item-Item CF, RMSE = 1.1246657502714277\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(number_row_test):\n",
-    "    pred = rs.pred(int(test_matrix[i,1]),int(test_matrix[i,0]),normalized = 0)\n",
-    "    SE += (pred - int(test_matrix[i,2]))**2\n",
-    "\n",
-    "RMSE = np.sqrt(SE/number_row_test) \n",
-    "print('Item-Item CF, RMSE =', RMSE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
