--- a/User_Vector_Count.ipynb
+++ b/User_Vector_Count.ipynb
@@ -414,7 +414,7 @@
     {
      "data": {
       "text/plain": [
-       "56"
+       "63"
       ]
      },
      "execution_count": 12,
@@ -434,7 +434,7 @@
     {
      "data": {
       "text/plain": [
-       "19"
+       "12"
       ]
      },
      "execution_count": 13,
@@ -505,21 +505,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2375\n",
-      "1958\n",
-      "1107\n",
       "1083\n",
-      "1037\n",
-      "1079\n",
-      "856\n",
-      "830\n",
       "1043\n",
-      "1704\n",
-      "1511\n",
-      "2920\n",
+      "1661\n",
       "1013\n",
+      "1739\n",
+      "856\n",
+      "1511\n",
       "1811\n",
-      "1136\n"
+      "30\n",
+      "903\n",
+      "1958\n",
+      "1079\n",
+      "830\n",
+      "1037\n"
      ]
     }
    ],
@@ -567,33 +566,6 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>36819.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2968</td>\n",
-       "      <td>1260759200</td>\n",
-       "      <td>2375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>9426.0</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>2455</td>\n",
-       "      <td>1260759113</td>\n",
-       "      <td>1958</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>152.0</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>1371</td>\n",
-       "      <td>1260759135</td>\n",
-       "      <td>1107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
        "      <td>1598.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>1343</td>\n",
@@ -601,43 +573,7 @@
        "      <td>1083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>665.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1287</td>\n",
-       "      <td>1260759187</td>\n",
-       "      <td>1037</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>6114.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1339</td>\n",
-       "      <td>1260759125</td>\n",
-       "      <td>1079</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0</td>\n",
-       "      <td>819.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1061</td>\n",
-       "      <td>1260759182</td>\n",
-       "      <td>856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0</td>\n",
-       "      <td>11360.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1029</td>\n",
-       "      <td>1260759179</td>\n",
-       "      <td>830</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>783.0</td>\n",
        "      <td>2.0</td>\n",
@@ -646,34 +582,16 @@
        "      <td>1043</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>8393.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2150</td>\n",
-       "      <td>1260759194</td>\n",
-       "      <td>1704</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1051.0</td>\n",
+       "      <td>97.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>1953</td>\n",
-       "      <td>1260759191</td>\n",
-       "      <td>1511</td>\n",
+       "      <td>2105</td>\n",
+       "      <td>1260759139</td>\n",
+       "      <td>1661</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>0</td>\n",
-       "      <td>11072.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3671</td>\n",
-       "      <td>1260759117</td>\n",
-       "      <td>2920</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>11778.0</td>\n",
        "      <td>2.0</td>\n",
@@ -682,7 +600,34 @@
        "      <td>1013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>847.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2193</td>\n",
+       "      <td>1260759198</td>\n",
+       "      <td>1739</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>819.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1061</td>\n",
+       "      <td>1260759182</td>\n",
+       "      <td>856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1051.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1953</td>\n",
+       "      <td>1260759191</td>\n",
+       "      <td>1511</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
        "      <td>0</td>\n",
        "      <td>8916.0</td>\n",
        "      <td>2.0</td>\n",
@@ -691,13 +636,58 @@
        "      <td>1811</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>8</th>\n",
        "      <td>0</td>\n",
-       "      <td>3179.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1405</td>\n",
-       "      <td>1260759203</td>\n",
-       "      <td>1136</td>\n",
+       "      <td>9909.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1260759144</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1103.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1129</td>\n",
+       "      <td>1260759185</td>\n",
+       "      <td>903</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0</td>\n",
+       "      <td>9426.0</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2455</td>\n",
+       "      <td>1260759113</td>\n",
+       "      <td>1958</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0</td>\n",
+       "      <td>6114.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1339</td>\n",
+       "      <td>1260759125</td>\n",
+       "      <td>1079</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>0</td>\n",
+       "      <td>11360.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1029</td>\n",
+       "      <td>1260759179</td>\n",
+       "      <td>830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>0</td>\n",
+       "      <td>665.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1287</td>\n",
+       "      <td>1260759187</td>\n",
+       "      <td>1037</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -705,21 +695,20 @@
       ],
       "text/plain": [
        "    userId       id  rating  movieId   timestamp  movieIndex\n",
-       "0        0  36819.0     1.0     2968  1260759200        2375\n",
-       "1        0   9426.0     2.5     2455  1260759113        1958\n",
-       "2        0    152.0     2.5     1371  1260759135        1107\n",
-       "3        0   1598.0     2.0     1343  1260759131        1083\n",
-       "4        0    665.0     2.0     1287  1260759187        1037\n",
-       "5        0   6114.0     3.5     1339  1260759125        1079\n",
-       "6        0    819.0     3.0     1061  1260759182         856\n",
-       "7        0  11360.0     3.0     1029  1260759179         830\n",
-       "8        0    783.0     2.0     1293  1260759148        1043\n",
-       "9        0   8393.0     3.0     2150  1260759194        1704\n",
-       "10       0   1051.0     4.0     1953  1260759191        1511\n",
-       "11       0  11072.0     3.0     3671  1260759117        2920\n",
-       "12       0  11778.0     2.0     1263  1260759151        1013\n",
-       "13       0   8916.0     2.0     2294  1260759108        1811\n",
-       "14       0   3179.0     1.0     1405  1260759203        1136"
+       "0        0   1598.0     2.0     1343  1260759131        1083\n",
+       "1        0    783.0     2.0     1293  1260759148        1043\n",
+       "2        0     97.0     4.0     2105  1260759139        1661\n",
+       "3        0  11778.0     2.0     1263  1260759151        1013\n",
+       "4        0    847.0     2.0     2193  1260759198        1739\n",
+       "5        0    819.0     3.0     1061  1260759182         856\n",
+       "6        0   1051.0     4.0     1953  1260759191        1511\n",
+       "7        0   8916.0     2.0     2294  1260759108        1811\n",
+       "8        0   9909.0     2.5       31  1260759144          30\n",
+       "9        0   1103.0     2.0     1129  1260759185         903\n",
+       "10       0   9426.0     2.5     2455  1260759113        1958\n",
+       "11       0   6114.0     3.5     1339  1260759125        1079\n",
+       "12       0  11360.0     3.0     1029  1260759179         830\n",
+       "13       0    665.0     2.0     1287  1260759187        1037"
       ]
      },
      "execution_count": 18,
@@ -764,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -781,9 +770,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9025, 671)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Yhat = D.dot(W) + b \n",
     "Yhat.shape"
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -834,11 +834,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_list_user_have_not_rated' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-66a138ca04cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_pred_rating\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mratings_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mN\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msmd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-24-eabc02dfbbe7>\u001b[0m in \u001b[0;36mget_pred_rating\u001b[0;34m(rate_matrix, userId, movie_count)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_pred_rating\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrate_matrix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muserId\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmovie_count\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0muserId\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist_not_rate\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mget_list_user_have_not_rated\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrate_matrix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muserId\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmovie_count\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist_not_rate\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mresult\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mYhat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muserId\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_list_user_have_not_rated' is not defined"
+     ]
+    }
+   ],
    "source": [
     "result = get_pred_rating(ratings_train,0,N)\n",
     "pd.DataFrame(smd.iloc[result[0:10]])"
